k8s_deploy/api-services/service_deployments/config-service_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-config-service-cuber
  labels:
    app: common-config-service-cuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-config-service-cuber
  template:
    metadata:
      labels:
        app: common-config-service-cuber
    spec:
      containers:
        - name: common-config-service-cuber
          image: evgeny88docker/common-config-service-cuber:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: common-config-service-cuber
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      name: service-port
      protocol: TCP
  selector:
    app: common-config-service-cuber
