k8s_deploy/api-services/service_deployments/item-service_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-service-api-cuber
  labels:
    app: item-service-api-cuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-service-api-cuber
  template:
    metadata:
      labels:
        app: item-service-api-cuber
    spec:
      containers:
        - name: item-service-api-cuber
          image: evgeny88docker/item-service-api-cuber:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: item-service-api-cuber
  labels:
    app: item-service-api-cuber
    type: deploy-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http-web
      protocol: TCP
  selector:
    app: item-service-api-cuber
