k8s_deploy/api-services/service_deployments/profile-service_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service-api-cuber
  labels:
    app: profile-service-api-cuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service-api-cuber
  template:
    metadata:
      labels:
        app: profile-service-api-cuber
    spec:
      containers:
        - name: profile-service-api-cuber
          image: evgeny88docker/profile-service-api-cuber:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: profile-service-api-cuber
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: profile-service-api-cuber
